$Id: NEWS,v 1.504 2003-11-08 22:19:29 castaglia Exp $

CVS
---------------------------------
- Bug 2135 - Add ability to handle passphrase-protected server keys.  mod_tls
  can now properly prompt for passphrases for protected server certificate
  keys when the daemon is starting up.
- Bug 2086 - Add limits for PORT, PASV.  This means that now one can use
  <Limit> to place access controls on the PORT and PASV commands.  This
  applies to the EPRT and EPSV commands as well if IPv6 support is enabled.
- Bug 2174 - mod_auth_unix should not act authoritatively.  This was causing
  problems when using mod_auth_unix.c and the AuthOrder configuration
  directive.
- Bug 2098 - Added SetEnv and UnsetEnv configuration directives.
- Bug 2271 - Improper autoconf check for getaddrinfo() on Tru64 UNIX 5.1.
  The getaddrinfo symbol is a macro, not a function, on that platform.
- Bug 2255 - RADIUS Service-Type should reflect attribute expectations.
- Added Event API.

1.2.9 - Released 31-Oct-2003
---------------------------------
- Bug 2181 - The prior fix for Bug#2181, handling of the PORT command when the
  --enable-ipv6 configure option is used, was not quite correct.  A problem
  still existed when an IPv4 client used the PORT command when talking to
  an IPv4-only vhost (as opposed to an IPv4 and IPv6 vhost).  Now PORT is
  properly handled in all cases.
- Bug 2204 - On systems that use the gethostbyname2() function, IPv4 clients
  were not being properly resolved to their DNS names.
- Bug 2242 - proftpd reread included additional config as user nobody instead
  of root.  The bug was caused by configuration directive handlers
  (specifically, SyslogFacility and SystemLog) that would incorrectly change
  the process privileges; depending on the order of configuration in
  proftpd.conf, some Included files might not be parseable due to permissions
  problems.
- Bug 2197 - The RPM .spec has been updated for easy RPM builds from CVS
  snapshots.